# autotranslate

./: .env.example  .gitignore  README.md  pyproject.toml
src/autotranslate/: __init__.py  audio.py  cli.py  config.py  models.py  mux.py  srt.py  transcribe.py  translate.py
