[project]
name = "autotranslate"
version = "0.1.0"
description = "Translate video audio to subtitles in another language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "openai>=1.0",
    "faster-whisper>=1.0",
    "ollama>=0.4",
    "pydantic>=2.0",
    "ffmpeg-python>=0.2",
    "python-dotenv>=1.0",
]

[project.scripts]
autotranslate = "autotranslate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autotranslate"]
